spade-tests/src/snapshots/spade_tests__data_requirements__match_statement_requires_data.snap
---
source: spade-tests/src/data_requirements.rs
---
fn test(sel: bool, x: inv bool, y: inv bool) -> inv bool {
    match sel {
        _ => x
    }
}


error: Trait bound not satisfied. inv bool does not implement core::Data
  ┌─ testinput:3:14
  │
3 │         _ => x
  │              ^
  │              │
  │              inv bool does not implement core::Data
  │              The type of this expression is not Data which means it cannot be the result of a match-statement.
  │              Required because of the trait bound specified here
  │
  = help: An expression not being Data typically means it contains at least one `inv` type
  = help: You can learn more about `Data` here: https://docs.spade-lang.org/wires.html
